--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,6 +21,9 @@ jobs:
       with:
         go-version: '1.21.4'
 
+    - name: Get Packages
+      run: go get ./...
+
     - name: Build
       run: go build -v ./...
 
